Fix #529 Base64 Decoding error when running under Java 16 Removed internal JDK dependencies Updated POM files to support updated Groovy compiler and Java 8 source